# wf_core

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.cmd  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml  validate.yml
.windsurf/: global_rules.md
.windsurf/rules/: 00-wf-core-routing.md  05-windsurf-channels.md  10-token-saving.md  20-preserve-existing-flow.md  30-terminal-hook-policy.md
.windsurf/skills/backend-and-data-architecture/: SKILL.md
.windsurf/skills/cloud-and-devops-expert/: SKILL.md
.windsurf/skills/git-expert/: SKILL.md
.windsurf/skills/memory-status-reporter/: SKILL.md
.windsurf/skills/mobile-development-life-cycle/: SKILL.md
.windsurf/skills/preserve-existing-flow/: SKILL.md
.windsurf/skills/qa-and-automation-engineer/: SKILL.md
.windsurf/skills/reviewer/: SKILL.md
.windsurf/workflows/: wf-core-finish.md  wf-core-hooks.md  wf-core-install-check.md  wf-core-review.md  wf-core-start.md  wf-core-token-saving-shell.md
docs/: devin-local.md  flow-check-schema.md  hooks.md  installation.md  memory-and-system-map.md  review-and-git-workflow.md  security.md  skills-inventory.md  token-saving.md  windsurf-surfaces.md
src/: main.rs
src/adapters/: build_lint.rs  common.rs  curl.rs  files.rs  generic.rs  git.rs  logs.rs  mod.rs  package.rs  search.rs  tests.rs
src/proxy/: adapter.rs  command_ast.rs  event_log.rs  mod.rs  raw_store.rs  registry.rs  render.rs  run.rs  safety.rs  shell.rs  shim.rs  token_meter.rs
templates/: commit-body.md  final-response.md  pr-body.md  review-summary.md
(+154 files in other folders)
