[package]
name = "wf-core"
version = "0.1.0"
edition = "2021"
description = "Rust-native managed Windsurf and Windsurf Next rules, skills, workflows, and token-saving command wrapper."
license = "MIT"

[dependencies]
tiktoken-rs = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
